JAFFA-622 - CWE 476 - Dereference null return value - jaffa-core